<resources>
    <string name="app_first_time_on_boarding_screen_pref">Eat Space-iz Customer ON BOARDING</string>
    <string name="app_name">Task</string>
    <string name="app_user_pref">EAT Space-iz Customer</string>
    <string name="onboarding_choose_a_favourite_food">Choose a Favourite Food</string>
    <string name="onboarding_first_discription">When you older Eat Street, we\'ll\nhook you up with exclusive coupon\nand rewards</string>
    <string name="btn_next">Next</string>
    <string name="btn_get_started">Let\'s Get Started!</string>
    <string name="onboarding_skip">skip</string>
    <string name="onboarding_receive_the_great_food">Receive the Great Food</string>
    <string name="onboarding_second_discription">You\'ll receive the great food within\nan hour. And get free delivery\ncredits for every order</string>
    <string name="onboarding_hot_delivery_to_home">Hot Delivery to Home</string>
    <string name="onboarding_third_discription">We make food ordering fast, simple\nand free - no matter if you order\nonline or cash</string>
    <string name="sign_in_tagline">Let\'s sign you in</string>
    <string name="sign_in_discription">Welcome back, you\'ve been missed</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="sign_up_discription">Create an account to continue</string>
    <string name="email">Email</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="mobile_number_tagline">Getting started</string>
    <string name="mobile_number_discription">Enter your phone number to use Eat\nSPACE-iZ and enjoy your food :)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password_recovery_tagline">Password Recovery</string>
    <string name="password_recovery_discription">Please enter your email address to\nrecover your password</string>
    <string name="btn_send_email">Send Email</string>
    <string name="btn_cancel">Cancel</string>
    <string name="password_reset_tagline">Reset Your Password</string>
    <string name="reset_password_discription">At least 8 characters with uppercase \nand lowercase letters</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp_authentication">OTP Authentication</string>
    <string name="email_otp_authentication_discription">An authentication code has been sent\nto abc@example.com</string>
    <string name="btn_continue">Continue</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="by_signing_up_you_agree_to_our">By Signing up, you agree to our</string>
    <string name="didn_t_receive_code">Didn\'t receive code.</string>
    <string name="resend_otp">Resend (30s)</string>
    <string name="mobile_otp_authentication_discription">An authentication code has been sent\nto +44 45131 48566</string>
    <string name="categories">Categories</string>
    <string name="show_all">Show all</string>
    <string name="popular_near_you">Popular near you</string>
    <string name="all_restaurants">Talk with us</string>
    <string name="faq">Frequently Asked Question</string>
    <string name="recommended">Recommended</string>
    <string name="deal_of_the_day">Deal of the day</string>
    <string name="search">Search</string>
    <string name="profile_my_orders">My Orders</string>
    <string name="profile_my_addresses">My Addresses</string>
    <string name="profile_payment_methods">Payment Methods</string>
    <string name="profile_offers_deals">Offers/Deals</string>
    <string name="profile_favourites">Favourites</string>
    <string name="profile_help_supports">Help &amp; Supports</string>
    <string name="profile_terms_condition">Terms &amp; Condition</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_logout">Logout</string>
    <string name="btn_save">Save</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="existing_password">Existing Password</string>
    <string name="new_password">New Password</string>
    <string name="payment">Payment</string>
    <string name="my_wallets">My Wallets</string>
    <string name="my_cards">My Cards</string>
    <string name="wallet_unlink">UNLINK</string>
    <string name="wallet_link">LINK</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="dummy_terms_conditions">TERMS OF USE As updated on 12th December 2020,Welcome to Our App, Connect.App (“App”), collectively, “Platform(s)”.These terms and conditions of use (“Terms of Use” or “Terms”) govern the use of Our Platform(s) and of the content appearing on Our Platform(s) by all users of the Platform(s), including users who are browsers, content providers, customers and/or are in any manner connected with and/or contribute to the use of the Platform(s) and/or the Services provided through it (“Users” or “You” or “Your”).Subject to Your compliance with these Terms, We grant You a non-exclusive, non-transferable, limited privilege to access and use Our Platform(s). Please read these Terms carefully before You access Our Platform(s). If You continue to browse and access the Platform(s) You are agreeing to comply with and be bound by the Terms of Use, which together with Our Privacy Policy govern Our relationship with You.</string>
    <string name="my_favourites">My Favourites</string>
    <string name="discount_code">Discount Code</string>
    <string name="btn_add_favourites_now">Add Favourites Now</string>
    <string name="no_favourites_found">No Favourites found</string>
    <string name="tell_us_your_favourites_and_we_ll_save_them_for_you">Tell us your favourites and we\'ll save them for you.</string>
    <string name="apply">APPLY</string>
    <string name="my_addresses">My Addresses</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_address">Add Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="btn_add_address">Add Address</string>
    <string name="btn_update_address">Update Address</string>
    <string name="my_orders">My Orders</string>
    <string name="upcoming">Top Links</string>
    <string name="history">Recent Links</string>
    <string name="btn_track">Track</string>
    <string name="btn_rate">Rate</string>
    <string name="btn_re_order">Re-Order</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_following">Following</string>
    <string name="wall">Wall</string>
    <string name="my_blogs">My Blogs</string>
    <string name="blog_fab_add_review">Categories</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_a_title">Add a title</string>
    <string name="write_a_review">Write a review</string>
    <string name="write_a_review_hint">Review must be at least 100 characters in length.</string>
    <string name="add_review_title_hint">Title must be at least 20 characters in length.</string>
    <string name="btn_submit_your_review">Submit Your Review</string>
    <string name="suggestions">Suggestions</string>
    <string name="search_restaurant">Search restaurant</string>
    <string name="experience">Experience</string>
    <string name="add_review">Add Review</string>
    <string name="location_service">Location Service</string>
    <string name="btn_enable_location">Enable Location</string>
    <string name="location_not_found">Location not found</string>
    <string name="please_switch_on_your_device_location">Please switch on your device location</string>
    <string name="notifications">Notifications</string>
    <string name="notification_discription">No Notifications for you.\nCheck back in sometime</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="help_us_serve_you_better">Help us serve you better!</string>
    <string name="food">Food</string>
    <string name="delivery">Delivery</string>
    <string name="view_details">View Details</string>
    <string name="delivery_slots">Delivery Slots</string>
    <string name="btn_submit">Submit</string>
    <string name="deliver_now">Deliver Now</string>
    <string name="deliver_in_45_minutes">Deliver in 45 Minutes</string>
    <string name="deliver_later_today">Deliver Later Today</string>
    <string name="btn_confirm">Confirm</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear">Clear</string>
    <string name="trending_near_you">Trending near you</string>
    <string name="btn_browse_menu">Browse Menu</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="bill_details">Bill Details</string>
    <string name="item_total">Sub total</string>
    <string name="total_discount">Total Discount</string>
    <string name="taxes_and_charges">Taxes and Charges</string>
    <string name="total">Total</string>
    <string name="apply_discount_code">Apply Discount Code</string>
    <string name="any_restaurant_request">Any restaurant request?</string>
    <string name="btn_deliver_later">Deliver Later</string>
    <string name="btn_deliver_now">Checkout</string>
    <string name="cost_for_2">Cost for 2</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="ratings">100+ Ratings</string>
    <string name="veg_only">Veg only</string>
    <string name="btn_add">Add</string>
    <string name="restuarant_fab_menu">Menu</string>
    <string name="thank_you">Thank you</string>
    <string name="your_order_has_been_successfully_booked">Your order has been successfully booked.</string>
    <string name="btn_back_to_menu">Back to Menu</string>
    <string name="enter_discount_code">Enter Discount Code</string>
    <string name="add_a_new_address">Add a New Address</string>
    <string name="address">Address</string>
    <string name="btn_deliver_here">Deliver Here</string>
    <string name="choose_saved_address">Choose Saved Address</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="securely_save_card_details">Securely save card details</string>
    <string name="btn_proceed_to_pay">Proceed to Pay</string>
    <string name="add_remove_cards">Add/Remove Cards</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card">Card</string>
    <string name="track_order">Track Order</string>
    <string name="your_driver">Your driver</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="resend_code">Resend OTP</string>
    <string name="main_bottom_home_tab_text">Links</string>
    <string name="main_bottom_search_tab_text">Courses</string>
    <string name="main_bottom_blogs_tab_text">Campaigns</string>
    <string name="main_bottom_profile_tab_text">Profile</string>
</resources>