<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragment.loginSignUp.ResetPasswordFragment">


        <ImageView
            android:id="@+id/iv_password_reset_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:srcCompat="@drawable/eat_space_iz_small_logo" />

        <TextView
            android:id="@+id/tv_password_reset_tagline"
            style="@style/sign_all_tagline_style"
            android:layout_marginTop="32dp"
            android:text="@string/password_reset_tagline"
            app:layout_constraintEnd_toEndOf="@+id/iv_password_reset_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_password_reset_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_password_reset_logo" />

        <TextView
            android:id="@+id/tv_reset_password_discription"
            style="@style/sign_all_discription_style"
            android:layout_marginTop="32dp"
            android:text="@string/reset_password_discription"
            app:layout_constraintEnd_toEndOf="@+id/tv_password_reset_tagline"
            app:layout_constraintStart_toStartOf="@+id/tv_password_reset_tagline"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_reset_tagline" />


        <TextView
            android:id="@+id/tv_password"
            style="@style/et_tittle_style"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reset_password_discription" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/OutlinedRoundedBox"
            android:layout_marginTop="4dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="********"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black_opacity_50" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_confirm_password"
            style="@style/et_tittle_style"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/OutlinedRoundedBox"
            android:layout_marginTop="4dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="********"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black_opacity_50" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_email"
            style="@style/black_btn_style"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_reset_password"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/white_btn_style"
            android:text="@string/btn_cancel"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/white_btn"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>