<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtb_payment_confirm"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/iv_payment_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_to_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtb_payment_confirm"
        app:srcCompat="@drawable/payment_confirmation_image" />

    <TextView
        android:id="@+id/tv_thank_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_payment_confirm"
        app:layout_constraintStart_toStartOf="@+id/iv_payment_confirm"
        app:layout_constraintTop_toBottomOf="@+id/iv_payment_confirm" />

    <TextView
        android:id="@+id/tv_payment_discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/your_order_has_been_successfully_booked"
        android:textAlignment="center"
        android:textColor="@color/discriptions"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_payment_confirm"
        app:layout_constraintStart_toStartOf="@+id/iv_payment_confirm"
        app:layout_constraintTop_toBottomOf="@+id/tv_thank_you" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_to_menu"
        style="@style/black_btn_style"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_back_to_menu"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>